--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -57,7 +57,7 @@ hr {
 .container {
     z-index: 5;
     height: 10vh;
-    width: 100%;
+    width: 100vw;
     box-shadow: 0px 4vmin 8vmin #000000;
     position: fixed;
     bottom: 0;
